# aws-lambda-mcp-oracle-hcm

./: .env.example  .gitignore  Cargo.toml  ENTRA_SETUP.md  README.md  build.sh  samconfig.toml  template.yaml  test-event.json  tool_schema.json
.cargo/: config.toml
src/: handler.rs  main.rs  models.rs
src/helpers/: env.rs
src/http/: client.rs
src/models/: employee.rs
src/tools/: mod.rs  passthrough_cache_person_id.rs
