[package]
name = "aws-lambda-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = { version = "0.14", features = ["anyhow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
incremental = false
overflow-checks = false
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
string_slice = "deny"
pedantic = "deny"

[package.metadata.lambda.deploy]
memory = 128                    # Function's memory
timeout = 30                    # Function's execution timeout
tracing = "active"              # Tracing mode
# role = "role-full-arn"          # Function's execution role
# env_file = ".env.production"    # File to load environment variables from
# env = { "VAR1" = "VAL1" }       # Additional environment variables
# layers = [ "layer-full-arn" ]   # List of layers to deploy with your function
# tags = { "team" = "lambda" }    # List of AWS resource tags for this function
# s3_bucket = "deploy-bucket"     # S3 bucket to upload the Lambda function to
# s3_key = "prefix/bootstrap.zip" # S3 object key to upload the Lambda function to
# include = [ "README.md" ]       # Extra list of files to add to the zip bundle